--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^2.9.4",
+    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-chartjs-2": "^2.11.2",
     "react-dom": "^18.0.0",
